--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 /* 2 Google Fonts */
 
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
@@ -49,7 +48,7 @@ table {
 
 em {
   font-weight: 500;
-} */ 
+} */
 
 
 @import "tailwindcss";
@@ -62,131 +61,136 @@ em {
 
 
 :root {
-    --color-primary: #FF7C10;
-    --color-secondary: #999;
-    --color-white:#ffffff;
-    --allbodybg-color:#FCF3EC;
- 
-    /* --bg-primary: #322d2d; */
-    /* --bg-secondary: #ee9b9b;   */
+  --color-primary: #FF7C10;
+  --color-secondary: #999;
+  --color-white: #ffffff;
+  --allbodybg-color: #FCF3EC;
+
+  /* --bg-primary: #322d2d; */
+  /* --bg-secondary: #ee9b9b;   */
 
 
-     /* Overpass is the primary font-family */
-    --font-primary: "Overpass", sans-serif;
- 
-      
-     /* Roboto is the secondary font-family */
-    --font-secondary: "Roboto", sans-serif;
-
-    --text-primary: #333333;
-    --text-seondary: #FF7C10;       
-    --text-white:#ffffff;
-  }
+  /* Overpass is the primary font-family */
+  --font-primary: "Overpass", sans-serif;
 
 
-  * {
-    box-sizing: border-box;
-  }
-  
+  /* Roboto is the secondary font-family */
+  --font-secondary: "Roboto", sans-serif;
 
-  html {
-    font-size: 16px;
-    scroll-behavior: smooth;
-    color: var(--text-primary);
+  --text-primary: #333333;
+  --text-seondary: #FF7C10;
+  --text-white: #ffffff;
+}
 
-  }
 
-  
-  body h1, body h2, body h3, body h4, body h6, body h6 {
-     font-family: var(--font-primary);
-      line-height: 1.3;
-  }
- 
-    body h1 {
-      font-weight: bold;
-      letter-spacing: -4%;
-      font-size: 3.75rem;
-      margin-bottom: 2rem;
+* {
+  box-sizing: border-box;
+}
 
-    }
-    
-  
-  body h2 {  
-      font-weight: bold;
-      letter-spacing: -4%;
-      font-size: 3rem; 
-  }
 
-    body h3 {  
-      font-weight: bold;
-      line-height: 24px;
-      letter-spacing: -3%;
-      font-size: 1rem; 
-  }
-  
+html {
+  font-size: 16px;
+  scroll-behavior: smooth;
+  color: var(--text-primary);
 
-    body li, body button{
-    /* font-size: 1rem;
+}
+
+
+body h1,
+body h2,
+body h3,
+body h4,
+body h6,
+body h6 {
+  font-family: var(--font-primary);
+  line-height: 1.3;
+}
+
+body h1 {
+  font-weight: bold;
+  letter-spacing: -4%;
+  font-size: 3.75rem;
+  margin-bottom: 2rem;
+
+}
+
+
+body h2 {
+  font-weight: bold;
+  letter-spacing: -4%;
+  font-size: 3rem;
+}
+
+body h3 {
+  font-weight: bold;
+  line-height: 24px;
+  letter-spacing: -3%;
+  font-size: 1rem;
+}
+
+
+body li,
+body button {
+  /* font-size: 1rem;
     line-height: 1.5;
     font-family: var(--font-secondary);
     font-weight: 400; */
-  }
-  
-  body em {
-    font-weight: 700;
-  }
+}
 
-  body small {
-    font-size: 0.8rem;
-  }
+body em {
+  font-weight: 700;
+}
 
-  button {
-    font-family: var(--font-secondary);
-    cursor: pointer;
-  }
+body small {
+  font-size: 0.8rem;
+}
 
-   img {
-      vertical-align: top;
-    }
-   
-  
-  .btn_main, .btn_secondary {
-    padding: 20px 30px;
-    border-radius: 5px;
-    color: var(--text-white);
-    text-transform: uppercase;
-    font-family: var(--font-secondary);
-    background: var(--color-primary);
-    font-weight: 700;
-    border: none;
-    letter-spacing: 0.125rem;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-    line-height: 1;
-     
-  }
+button {
+  font-family: var(--font-secondary);
+  cursor: pointer;
+}
+
+img {
+  vertical-align: top;
+}
 
 
-  .btn_secondary {
-    background: var(--color-white);
-    border: 1px solid #808080;
-    color: var(--text-primary);
-  }
+.btn_main,
+.btn_secondary {
+  padding: 20px 30px;
+  border-radius: 5px;
+  color: var(--text-white);
+  text-transform: uppercase;
+  font-family: var(--font-secondary);
+  background: var(--color-primary);
+  font-weight: 700;
+  border: none;
+  letter-spacing: 0.125rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  line-height: 1;
+
+}
 
 
-  .btn_main:hover,.btn_secondary:hover {
-    opacity: 0.8;
-    transition: all 0.2s ease-in-out;
-  }
-  
+.btn_secondary {
+  background: var(--color-white);
+  border: 1px solid #808080;
+  color: var(--text-primary);
+}
 
-  /* .width_90{
+
+.btn_main:hover,
+.btn_secondary:hover {
+  opacity: 0.8;
+  transition: all 0.2s ease-in-out;
+}
+ 
+ 
+
+
+
+/* .width_90{
     width: 1400px;
     margin: 0 auto;
   } */
-
-
-
- 
- 
-
