--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@ em {
   --color-secondary: #999;
   --color-white: #ffffff;
   --allbodybg-color: #FCF3EC;
+  --color-bglocation: #fee5d0;
 
   /* --bg-primary: #322d2d; */
   /* --bg-secondary: #ee9b9b;   */
