--- a/src/index.css
+++ b/src/index.css
@@ -4,80 +4,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 
-/* html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-/* article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol, ul {
-  list-style: none;
-}
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-	content: none;
-}
-table {
-  border-collapse: collapse;
-	border-spacing: 0;
-}
-
-em {
-  font-weight: 500;
-} */
-
-
-
-
 /*=====================================
     BODY HTML CSS DECALARATIONS
 =====================================*/
 /****************GOOD TO HAVES*****************/
 
 
+
 :root {
+
+  /* Light mode (default) */
   --color-primary: #FF7C10;
   --color-secondary: #999;
   --color-white: #ffffff;
   --allbodybg-color: #FCF3EC;
   --color-bglocation: #fee5d0;
+  --bgbook-card: #FCF3EC;
+
   /* --bg-primary: #322d2d; */
   /* --bg-secondary: #ee9b9b;   */
 
+
+  /* Fonts */
   /* Overpass is the primary font-family */
   --font-primary: "Overpass", sans-serif;
 
   /* Roboto is the secondary font-family */
   --font-secondary: "Roboto", sans-serif;
 
+  /* Text colors */
   --text-primary: #333333;
   --text-seondary: #FF7C10;
   --text-white: #ffffff;
 }
+
+
+/* Light theme (default) */
+.light-theme {
+  
+}
+
+
+/* Dark theme */
+.dark-theme {
+  --allbodybg-color: #121212;
+  --text-primary: #ffffff;
+  --text-white: #ffffff;
+  --color-white: #121212;
+  --bgbook-card: #451a0136;
+  --color-bglocation: #451a0136;
+  --color-white:#451a0136;
+
+}
+
 
 
 * {
@@ -89,9 +68,9 @@ html {
   font-size: 16px;
   scroll-behavior: smooth;
   color: var(--text-primary);
+  transition: background-color 0.3s ease, color 0.3s ease;
 
 }
-
 
 body h1,
 body h2,
@@ -125,45 +104,45 @@ body h3 {
   font-size: 1rem;
 }
 
- @media(max-width:1280px) {
 
-body h1 {
-  font-size: 3rem;
-  margin-bottom: 1rem;
-}
-body h2 {
-  font-size: 2.8rem;
-}
 
+
+
+/* Smooth theme transition */
+.light-theme,
+.dark-theme {
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
- @media(max-width:768px) {
 
-body h1 {
-  font-size: 3rem;
-  margin-bottom: 1rem;
-}
-body h2 {
-  font-size: 2.8rem;
-}
+
+
+@media(max-width:768px) {
+
+  body h1 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+
+  body h2 {
+    font-size: 2.8rem;
+  }
 
 }
 
 
 @media(max-width:640px) {
 
-body h1 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-}
-body h2 {
-  font-size: 1.8rem;
-}
+  body h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  body h2 {
+    font-size: 1.8rem;
+  }
 
 }
-
-
- 
 
 
 body em {
@@ -214,13 +193,51 @@ img {
 .btn_secondary:hover {
   opacity: 0.8;
   transition: all 0.2s ease-in-out;
+  
 }
 
-@media(max-width:1280px) {
-.btn_main, .btn_secondary {
-  padding: 20px 20px;
-  font-size: 12px
+
+
+
+/* Base dark mode toggle button */
+.btn_dark {
+  padding: 10px 15px;
+  border-radius: 20px;
+  font-family: var(--font-secondary);
+  background: var(--color-white);
+  border: 1px solid #808080;
+  color: var(--text-primary);
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  line-height: 1;
+  font-size: 1rem;
 }
+
+/* Light Theme Hover: white → black */
+.light-theme .btn_dark:hover {
+  background: #121212;      
+  color: #ffffff;   
+  /* opacity: 1;           */
+}
+
+/* Dark Theme Hover: black → white */
+.dark-theme .btn_dark:hover {
+  background: #ffffff;   
+  color: #121212; 
+  /* opacity: 1;          */
+}
+
+
+.dark-theme .btn_secondary:hover {
+    background: #ffffff;  
+    color: #121212; 
+    opacity: 1;
+}
+
+@media(max-width:1023px) {
+  .btn_dark {
+    padding: 8px 12px;
+  }
 
 
 }
@@ -228,26 +245,16 @@ img {
 
 
 @media(max-width:500px) {
-.btn_main, .btn_secondary {
-  padding: 15px 15px;
-  font-size: 12px
-}
+
+  .btn_main,
+  .btn_secondary {
+    padding: 15px 15px;
+    font-size: 12px
+  }
 
 
 }
 
 
 
- 
- 
-
-
-
-/* .width_90{
-    width: 1400px;
-    margin: 0 auto;
-  } */
-
-
-  
 @import "tailwindcss";
